fix packege name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Go-by-components",
+  "name": "@Touch/Go-by-components",
   "version": "1.0.1",
   "description": "",
   "publishConfig": {
