--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=https://npm.pkg.github.com/jucamilo340
-//npm.pkg.github.com/:_authToken=
+# registry=https://npm.pkg.github.com/jucamilo340
+# //npm.pkg.github.com/:_authToken=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
